# Molekulardynamik

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  README.md
.github/workflows/: ContinuousIntegration.yml
cmake/modules/: doxygen.cmake  googletest.cmake  openmp.cmake  spdlog.cmake
doxys_documentation/html/: ArrayUtils_8h.html  ArrayUtils_8h_source.html  FileReader_8cpp.html  FileReader_8h.html  FileReader_8h_source.html  MaxwellBoltzmannDistribution_8h.html  MaxwellBoltzmannDistribution_8h_source.html  MolSim_8cpp.html  Particle_8cpp.html  Particle_8h.html  Particle_8h_source.html  VTKWriter_8cpp.html  VTKWriter_8h.html  VTKWriter_8h_source.html  XYZWriter_8cpp.html  XYZWriter_8h.html  XYZWriter_8h_source.html  annotated.html  classCellData-members.html  classCellData.html  classCells-members.html  classCells.html  classDataArrayList__t-members.html  classDataArrayList__t.html  classDataArray__t-members.html  classDataArray__t.html  classFileReader-members.html  classFileReader.html  classParticle-members.html  classParticle.html  classPieceUnstructuredGrid__t-members.html  classPieceUnstructuredGrid__t.html  classPointData-members.html  classPointData.html  classPoints-members.html  classPoints.html  classPolyData__t-members.html  classPolyData__t.html  classUnstructuredGrid__t-members.html  classUnstructuredGrid__t.html  (+65 more)
doxys_documentation/html/search/: all_1.js  all_11.js  all_12.js  all_13.js  all_14.js  all_16.js  all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  all_b.js  all_c.js  all_d.js  all_e.js  functions_10.js  functions_2.js  functions_3.js  functions_b.js  functions_c.js  functions_e.js  namespaces_0.js  searchdata.js  (+11 more)
doxys_documentation/latex/: ArrayUtils_8h.tex  ArrayUtils_8h_source.tex  FileReader_8cpp.tex  FileReader_8h.tex  FileReader_8h_source.tex  MaxwellBoltzmannDistribution_8h.tex  MaxwellBoltzmannDistribution_8h_source.tex  MolSim_8cpp.tex  Particle_8cpp.tex  Particle_8h.tex  Particle_8h_source.tex  VTKWriter_8cpp.tex  VTKWriter_8h.tex  VTKWriter_8h_source.tex  XYZWriter_8cpp.tex  XYZWriter_8h.tex  XYZWriter_8h_source.tex  annotated.tex  classCellData.eps  classCellData.tex  classCells.eps  classCells.tex  classDataArrayList__t.eps  classDataArrayList__t.tex  classDataArray__t.eps  classDataArray__t.tex  classFileReader.tex  classParticle.tex  classPieceUnstructuredGrid__t.eps  classPieceUnstructuredGrid__t.tex  classPointData.eps  classPointData.tex  classPoints.eps  classPoints.tex  classPolyData__t.eps  classPolyData__t.tex  classUnstructuredGrid__t.eps  classUnstructuredGrid__t.tex  classVTKFile__t.eps  classVTKFile__t.tex  (+32 more)
input/: alle_planeten.txt  assignment2.txt  assignment2_fast.txt  assignment2_fast_light.txt  assignment3.txt  eingabe-sonne.txt  test.txt
input/assignment1/: alle_planeten.txt
input/assignment2/: assignment2.txt
input/assignment3/: 2Dsquare_1024_without_LC.txt
input/assignment4/: Falling_drop_checkpoint.txt  Rayleigh-Taylor instability.txt  Simultation of a falling drop - Liquid.txt  checkpoint7900.txt  task2_big.txt  task2_small.txt  task3_prep.txt  task3_prep_RF.txt  task3_prep_VR.txt  task3_rest.txt  task3_rest_RF.txt  task3_rest_VR.txt  test.txt
input/assignment5/: task3_Rayleigh_Taylor_instability_3D.txt  task4_nano_scale_flow.txt  test.txt
input/others/: CI_simulation.xml  MolSimExample.xml  christmas_tree.txt  molSimExample.xml  txt_file_description.txt
profiling_results/: profile_report_gprof6568.txt  profile_report_gprof6942.txt  profile_report_gprof7303profilingHashsetTask2.txt  profile_report_gprof7430.txt  profiling_molSim.6568.cm4r13c03s08.txt  profiling_molSim.6942.cm4r13c02s05.txt  profiling_molSim.7121.cm4r13c05s08.txt  profiling_molSim.7299.cm4r13c02s03.txt  profiling_molSim.7303.cm4r13c04s08.txt  profiling_molSim.7430.cm4r13c01s06.txt  profiling_molSim.7440.cm4r15c02s07.txt
scripts/: script.sh  script2.sh  script6568FranziskasSim.sh  script7121FiveTimeTask2bigWithoutPG.sh  scriptIntel.sh
src/: Environment.cpp  Environment.h  FileReader.cpp  FileReader.h  Force.h  Force.hpp  Integrator.cpp  Integrator.h  IntegratorBase.cpp  IntegratorBase.h  MolSim.cpp  Particle.cpp  Particle.h  ParticleContainer.cpp  ParticleContainer.h  RungeKutta.cpp  RungeKutta.h  SimulationAlgorithm.cpp  SimulationAlgorithm.h  StoermerVerlet.cpp  StoermerVerlet.h  TestScenarios.h  demos.h  force.h  force.hpp  main.cpp
src/core/: IntegratorBase.cpp  IntegratorBase.h  IntegratorFactory.cpp  IntegratorFactory.h  RungeKutta.cpp  RungeKutta.h  Statistics.cpp  Statistics.h  StoermerVerlet.cpp  StoermerVerlet.h
src/effects/: ConstantForce.cpp  ConstantForce.h  Thermostat.cpp  Thermostat.h
src/env/: Boundary.cpp  Boundary.h  Common.h  Environment.cpp  Environment.h  Force.cpp  Force.h  Particle.cpp  Particle.h  ParticleGrid.cpp  ParticleGrid.h  Thermostat.cpp  Thermostat.h
src/io/: FileReader.cpp  FileReader.h  IOStrategy.cpp  IOStrategy.h  Logger.cpp  Logger.h  OutputStrategy.cpp  OutputStrategy.h  VTKWriter.cpp  VTKWriter.h  XYZWriter.cpp  XYZWriter.h  molSimExample.xml  molSimSchema.cxx  molSimSchema.hxx  molSimSchema.xsd  vtk-unstructured.cpp  vtk-unstructured.h
src/outputWriter/: OutputStrategy.cpp  OutputStrategy.h  OutputWriter.h  VTKWriter.cpp  VTKWriter.h  XYZWriter.cpp  XYZWriter.h
src/utils/: ArrayUtils.h  ContainerUtils.h  Debug.h  MaxwellBoltzmannDistribution.h  Parse.cpp  Parse.h  VectorUtils.hpp  parse.cpp  parse.h
testing/: BoundaryConditionTests.cpp  CMakeLists.txt  CSVWriterTest.cpp  EnvironmentTests.cpp  ForceTests.cpp  IOTests.cpp  LinkedCellsTests.cpp  ParallelizationTests.cpp  ParticleContainerTests.cpp  SimulationTests.cpp  StoermerVerlet.cpp  StoermerVerletTests.cpp  ThermostatTests.cpp
testing/test_input_files/Checkpoint/: CheckpointingTestFileRead.txt  CheckpointingTestFileWrite.txt
testing/test_input_files/txt/: InputTest1.txt  InputTest2.txt  InputTest3.txt  InputTest4.txt  InputTest5.txt  InputTest6.txt  InputTest7.txt
testing/test_input_files/xml/: InputTest1.xml  InputTest2.xml  InputTest3.xml  InputTest4.xml  InputTest5.xml  InputTest6.xml  InputTest7.xml
(+71 files in other folders)
